--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: amadinathaniel/demo-app:java-maven-1.0
     ports:
       - 8080:8080
+    restart: always
   postgres:
     image: postgres:13
     ports:
